# gommage

./: .commitlintrc.yaml  .gitignore  .release-please-manifest.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  THREAT_MODEL.md  deny.toml  justfile  release-please-config.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: beta_readiness.yml  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml  fuzz.yml  release.yml  sbom.yml  scorecard.yml
capabilities/: bash.yaml  cloud-tools.yaml  filesystem.yaml
crates/gommage-audit/: CHANGELOG.md  Cargo.toml
crates/gommage-audit/src/: lib.rs  stream.rs  tests.rs
crates/gommage-cli/: CHANGELOG.md  Cargo.toml
crates/gommage-cli/schemas/: policy-fixture.schema.json
crates/gommage-cli/src/: agent.rs  agent_status.rs  agent_uninstall.rs  approval_cmd.rs  approval_workflow.rs  audit_cmd.rs  audit_replay.rs  beta.rs  daemon.rs  doctor.rs  gestral.rs  input.rs  main.rs  map.rs  mascot.rs  mcp.rs  operator_metrics.rs  policy_cmd.rs  policy_diff.rs  quickstart.rs  quickstart_plan.rs  release.rs  repair.rs  replay.rs  report.rs  sandbox.rs  smoke.rs  tui.rs  tui_actions.rs  tui_render.rs  tui_stream.rs  tui_views.rs  uninstall.rs  util.rs  verify.rs
crates/gommage-cli/tests/: cli_approval.rs  cli_beta.rs  cli_core.rs  cli_host_cleanup.rs  cli_operator.rs  cli_policy.rs  cli_policy_diff.rs  cli_quickstart.rs  cli_replay.rs  cli_report.rs  cli_tui.rs  cli_verify_doctor_audit.rs
crates/gommage-cli/tests/support/: mod.rs
crates/gommage-core/: CHANGELOG.md  Cargo.toml
crates/gommage-core/src/: approval.rs  approval_webhook.rs  capability.rs  error.rs  evaluator.rs  hardstop.rs  lib.rs  mapper.rs  picto.rs  policy.rs  runtime.rs  toolcall.rs  webhook_signature.rs
crates/gommage-core/tests/: determinism.rs  proptest_robustness.rs
crates/gommage-daemon/: CHANGELOG.md  Cargo.toml
crates/gommage-daemon/src/: main.rs
crates/gommage-mcp/: CHANGELOG.md  Cargo.toml
crates/gommage-mcp/src/: main.rs
crates/gommage-mcp/tests/: fallback_audit.rs
crates/gommage-stdlib/: CHANGELOG.md  Cargo.toml
crates/gommage-stdlib/capabilities/: mcp.yaml  web.yaml
crates/gommage-stdlib/policies/: 00-hard-stops.yaml  05-recovery.yaml  15-agent-tools.yaml  40-cloud.yaml
crates/gommage-stdlib/src/: lib.rs
docs/: agent-command-manifest.json  agent-compatibility.md  architecture.md  beta-readiness.md  beta-test-loop.md  comparison-with-claude-code.md  comparison-with-codex.md  diagnostics.md  host-smoke.md  input-schema.md  pictos.md  policy-cookbook.md  publishing.md  release-signing.md  roadmap.md
examples/: README.md  claude-code-setup.md  codex-setup.md  policy-fixtures.yaml
policies/: 10-filesystem.yaml  20-git.yaml  30-package-managers.yaml  50-cloud-tools.yaml
scripts/: check-agent-command-contracts.sh  check-crates-publish-readiness.sh  check-doc-release-refs.sh  check-installer-release-resolution.sh  check-public-policy-fixtures.sh  check-release-assets.sh  check-workspace-internal-deps.sh  host-smoke.sh  install.sh  sync-workspace-internal-deps.sh  tag-skipped-release-please-components.sh  verify-release.sh
skills/gommage/: SKILL.md
skills/gommage/agents/: openai.yaml
tests/determinism/fixtures/: adversarial_bash_c_rm_rf.json  adversarial_env_prefix_rm_rf.json  adversarial_newline_injection.json  adversarial_relative_dotdot_path.json  adversarial_relative_rm_rf.json  adversarial_sh_c_wrapper.json  adversarial_sudo_bash_wrap.json  adversarial_symlink_read_documented_limit.json  adversarial_unicode_lookalike_main.json  adversarial_xargs_rm_rf.json  aws_ec2_describe.json  aws_iam_create_user.json  aws_s3_rm.json  bun_install.json  curl_pipe_sh.json  dd_device.json  docker_push.json  fs_read_project.json  fs_write_node_modules.json  fs_write_project.json  fs_write_tmp.json  gh_release_create.json  gh_repo_delete.json  git_force_push.json  git_push_feature.json  git_push_main.json  git_push_master.json  grep_project.json  kubectl_apply.json  kubectl_delete_deployment.json  kubectl_exec.json  kubectl_get_pods.json  mcp_write_tool.json  rm_rf_root.json  terraform_apply.json  terraform_destroy.json  terraform_plan.json  unknown_tool.json  vercel_deploy_prod.json  webfetch_url.json  (+1 more)
