[workspace]
resolver = "2"
members = [
    "crates/gommage-core",
    "crates/gommage-audit",
    "crates/gommage-daemon",
    "crates/gommage-cli",
    "crates/gommage-mcp",
]

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2024"
rust-version = "1.90"
license = "MIT"
repository = "https://github.com/Arakiss/gommage"
homepage = "https://gommage.dev"
authors = ["Petru Arakiss <petruarakiss@gmail.com>"]

[workspace.dependencies]
gommage-core   = { path = "crates/gommage-core",   version = "0.1.0-alpha.1" }
gommage-audit  = { path = "crates/gommage-audit",  version = "0.1.0-alpha.1" }

serde      = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror  = "2"
anyhow     = "1"
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

globset    = "0.4"
regex      = "1"

clap       = { version = "4", features = ["derive", "env"] }
tokio      = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "fs", "signal", "sync"] }
rusqlite   = { version = "0.33", features = ["bundled"] }
ed25519-dalek = { version = "2", features = ["rand_core", "std"] }
rand_core  = { version = "0.6", features = ["std"] }
sha2       = "0.10"
hex        = "0.4"
base64     = "0.22"
time       = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
dirs       = "5"
uuid       = { version = "1", features = ["v7", "serde"] }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 0
debug = 1
