[workspace]
resolver = "2"
members = [
    "crates/gommage-core",
    "crates/gommage-audit",
    "crates/gommage-daemon",
    "crates/gommage-cli",
    "crates/gommage-mcp",
]

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2024"
rust-version = "1.90"
license = "MIT"
repository = "https://github.com/Arakiss/gommage"
homepage = "https://gommage.dev"
authors = ["Petru Arakiss <petruarakiss@gmail.com>"]

[workspace.dependencies]
# Internal crates — always path + version pinned together.
gommage-core   = { path = "crates/gommage-core",   version = "=0.1.0-alpha.1" }
gommage-audit  = { path = "crates/gommage-audit",  version = "=0.1.0-alpha.1" }

# --- Plumbing (caret-ranged: stable interfaces, cheap patch bumps) ----------
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror  = "2"
anyhow     = "1"
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
clap       = { version = "4", features = ["derive", "env"] }
tokio      = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "fs", "signal", "sync"] }
dirs       = "5"

# --- Determinism-critical (exact pins: any change here can flip a decision) -
# Touching any of these requires a PR with a green determinism-suite run.
globset       = "=0.4.18"
regex         = "=1.12.3"
ed25519-dalek = { version = "=2.2.0", features = ["rand_core", "std"] }
rand_core     = { version = "=0.6.4", features = ["std"] }
rusqlite      = { version = "=0.33.0", features = ["bundled"] }
sha2          = "=0.10.9"
hex           = "=0.4.3"
base64        = "=0.22.1"
time          = { version = "=0.3.47", features = ["serde", "formatting", "parsing", "macros"] }
uuid          = { version = "=1.23.1", features = ["v7", "serde"] }

# serde_yaml is unmaintained upstream; tracked as tech debt in CHANGELOG
# under "Known issues". Migration target: serde_yaml_ng or serde_yml, to be
# evaluated before v0.2.
serde_yaml = "=0.9.34"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 0
debug = 1
