[package]
name = "gommage-audit"
version = "0.4.1-alpha.1"
publish = false    # flip when the crate is first published to crates.io
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Append-only signed audit log for Gommage decisions."

[dependencies]
gommage-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
ed25519-dalek.workspace = true
rand_core.workspace = true
sha2.workspace = true
hex.workspace = true
base64.workspace = true
time.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
rand_core = { workspace = true }
serde_json = { workspace = true }
