[package]
name = "gommage-core"
version = "0.4.1-alpha.1"
publish = false    # flip when the crate is first published to crates.io
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Policy engine, capability mapper, and picto store for the Gommage permission harness."

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true
globset.workspace = true
regex.workspace = true
rusqlite.workspace = true
ed25519-dalek.workspace = true
rand_core.workspace = true
sha2.workspace = true
hex.workspace = true
base64.workspace = true
time.workspace = true
uuid.workspace = true
dirs.workspace = true

[dev-dependencies]
gommage-stdlib.workspace = true
serde_json = { workspace = true }
tempfile = "3"
proptest = "=1.11.0"
