[package]
name = "gommage-daemon"
version = "0.2.5-alpha.1"
publish = false    # flip when the crate is first published to crates.io
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Gommage daemon — Unix-socket IPC and decision dispatcher."

[[bin]]
name = "gommage-daemon"
path = "src/main.rs"

[dependencies]
gommage-core.workspace  = true
gommage-audit.workspace = true
serde.workspace         = true
serde_json.workspace    = true
thiserror.workspace     = true
anyhow.workspace        = true
tracing.workspace       = true
tracing-subscriber.workspace = true
clap.workspace          = true
tokio.workspace         = true
ed25519-dalek.workspace = true
rand_core.workspace     = true
dirs.workspace          = true
time.workspace          = true
uuid.workspace          = true
